--- a/hotel/pubspec.yaml
+++ b/hotel/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   get_it: ^7.6.0
   carousel_slider: ^4.2.1
   mask_text_input_formatter: ^2.5.0
+  intl: ^0.18.1
+  expandable: ^5.0.1
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
