--- a/Facts_and_Achievements_in_sports/android/app/src/main/AndroidManifest.xml
+++ b/Facts_and_Achievements_in_sports/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.facts_and_achievements_in_sports">
-   <application
+     <uses-permission android:name="android.permission.INTERNET"/>
+    <application
+        android:usesCleartextTraffic="true"
         android:label="facts_and_achievements_in_sports"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
