--- a/Facts_and_Achievements_in_sports/pubspec.yaml
+++ b/Facts_and_Achievements_in_sports/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   json_serializable: ^6.6.2
   get_it: ^7.6.0
   build_runner: ^2.3.3
+  firebase_core: ^2.15.1
+  firebase_remote_config: ^4.2.5
+  webview_flutter: ^4.2.4
+  device_info_plus: ^9.0.3
+  path_provider: ^2.1.1
+  connectivity_plus: ^4.0.2
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +72,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/facts_data/facts_data.json
+    - assets/data/facts_data.json
+    - assets/data/url.txt
     - assets/images/№1.jpg
     - assets/images/№2.jpg
     - assets/images/№3.jpg
