--- a/Facts_and_Achievements_in_sports/android/app/src/profile/AndroidManifest.xml
+++ b/Facts_and_Achievements_in_sports/android/app/src/profile/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.facts_and_achievements_in_sports">
+    package="achievemen.onsem">
     <!-- The INTERNET permission is required for development. Specifically,
          the Flutter tool needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
