--- a/Facts_and_Achievements_in_sports/android/app/src/main/AndroidManifest.xml
+++ b/Facts_and_Achievements_in_sports/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
      <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:usesCleartextTraffic="true"
-        android:label="Achievements"
+        android:label="SN"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
